--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "test2",
-    "slug": "test2",
+    "name": "Bistrô Donte",
+    "slug": "Bora estudar pra prova aí",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
